--- a/201-250.md
+++ b/201-250.md
@@ -1,4 +1,4 @@
-## [238. Product of Array Except Self](https://leetcode.com/problems/product-of-array-except-self/)
+## [238. Product of Array Except Self - Medium](https://leetcode.com/problems/product-of-array-except-self/)
 
 ```python
 import functools
