--- a/201-250.md
+++ b/201-250.md
@@ -1,3 +1,56 @@
+## [221. Maximal Square - Medium](https://leetcode.com/problems/maximal-square/)
+
+```python
+class Solution:
+  def maximalSquare(self, matrix: List[List[str]]) -> int:
+    if not matrix or not matrix[0]:
+      return 0
+    ROW, COL = len(matrix), len(matrix[0])
+    dp = [[0] * COL for _ in range(ROW)]
+    # process the first row
+    dp[0] = [int(n) for n in matrix[0]]
+    ans = max(dp[0])
+    # process the first column
+    for row in range(ROW):
+      dp[row][0] = int(matrix[row][0])
+      ans = max(ans, dp[row][0])
+
+    for row in range(1, ROW):
+      for col in range(1, COL):
+        if matrix[row][col] == '1':
+          dp[row][col] = (
+              min(dp[row-1][col], dp[row][col-1], dp[row-1][col-1]) + 1
+          )
+
+          ans = max(ans, dp[row][col])
+    return ans**2
+
+
+# Space optimization, just use two rows
+class Solution:
+  def maximalSquare(self, matrix: List[List[str]]) -> int:
+    if not matrix or not matrix[0]:
+      return 0
+    ROW, COL = len(matrix), len(matrix[0])
+    dp = [[int(n) for n in matrix[0]], [0] * COL]
+    print(dp)
+    ans = max(dp[0])
+
+    for row in range(1, ROW):
+      for col in range(COL):
+        if col == 0:
+          dp[1][0] = int(matrix[row][col])
+          ans = max(ans, dp[1][0])
+          continue
+
+        if matrix[row][col] == '1':
+          dp[1][col] = min(dp[1][col-1], dp[0][col], dp[0][col-1]) + 1
+          ans = max(ans, dp[1][col])
+      dp[0] = dp[1]
+      dp[1] = [0] * COL
+    return ans**2
+```
+
 ## [238. Product of Array Except Self - Medium](https://leetcode.com/problems/product-of-array-except-self/)
 
 ```python
