--- a/1-50.md
+++ b/1-50.md
@@ -32,3 +32,42 @@ class Solution:
       dividend -= subtract
     return symbol * ans
 ```
+
+## 34. [Find First and Last Position of Element in Sorted Array - Medium](https://leetcode.com/problems/find-first-and-last-position-of-element-in-sorted-array/)
+
+```python
+import bisect
+
+class Solution:
+  def searchRange(self, nums: List[int], target: int) -> List[int]:
+    if not nums:
+      return [-1, -1]
+    left_idx = bisect.bisect_left(nums, target)
+    if left_idx >= len(nums) or nums[left_idx] != target:
+      return [-1, -1]
+    right_idx = bisect.bisect_right(nums, target) - 1
+    return [left_idx, right_idx]
+
+
+class Solution:
+  def searchRange(self, nums: List[int], target: int) -> List[int]:
+    ans = [-1, -1]
+    if not nums:
+      return ans
+    lo, hi = 0, len(nums) - 1
+    while lo < hi:
+      mid = (lo + hi) // 2  # left bias
+      if nums[mid] < target: lo = mid + 1
+      else: hi = mid
+    if nums[lo] != target:
+      return ans
+    ans[0] = lo
+
+    hi = len(nums) - 1
+    while lo < hi:
+      mid = (lo + hi) // 2 + 1  # right bias
+      if nums[mid] > target: hi = mid - 1
+      else: lo = mid
+    ans[1] = hi
+    return ans
+```
