--- a/1-50.md
+++ b/1-50.md
@@ -1,4 +1,27 @@
-## 29. [Divide Two Integers - Medium](https://leetcode.com/problems/divide-two-integers/)
+## [22. Generate Parentheses - Medium](https://leetcode.com/problems/generate-parentheses/)
+
+```python
+class Solution:
+  def generateParenthesis(self, n: int) -> List[str]:
+    ans = []
+    tmp = [0] * (2*n)  # to fill in parentheses
+    target_len = 2 * n
+    def helper(left, right, i):
+      # left and right means the corresponding parenthese we can use
+      if i == target_len:
+        ans.append(''.join(tmp))
+        return
+      if left:
+        tmp[i] = '('
+        helper(left-1, right+1, i+1)
+      if right:
+        tmp[i] = ')'
+        helper(left, right-1, i+1)
+    helper(n, 0, 0)
+    return ans
+```
+
+## [29. Divide Two Integers - Medium](https://leetcode.com/problems/divide-two-integers/)
 
 ```python
 class Solution:
@@ -33,7 +56,7 @@ class Solution:
     return symbol * ans
 ```
 
-## 34. [Find First and Last Position of Element in Sorted Array - Medium](https://leetcode.com/problems/find-first-and-last-position-of-element-in-sorted-array/)
+## [34. Find First and Last Position of Element in Sorted Array - Medium](https://leetcode.com/problems/find-first-and-last-position-of-element-in-sorted-array/)
 
 ```python
 import bisect
