--- a/1-50.md
+++ b/1-50.md
@@ -1,3 +1,20 @@
+## [20. Valid Parentheses - Easy](https://leetcode.com/problems/valid-parentheses/)
+
+```python
+class Solution:
+  mapping = {')': '(', '}': '{', ']': '['}
+
+  def isValid(self, s: str) -> bool:
+    stack = []
+    for p in s:
+      if p not in self.mapping:  # it's open parentheses
+        stack.append(p)
+      else:
+        if not stack or stack.pop() != self.mapping[p]:
+          return False
+    return len(stack) == 0
+```
+
 ## [22. Generate Parentheses - Medium](https://leetcode.com/problems/generate-parentheses/)
 
 ```python
