--- a/1-50.md
+++ b/1-50.md
@@ -73,6 +73,44 @@ class Solution:
     return symbol * ans
 ```
 
+## [32. Longest Valid Parentheses - Hard](https://leetcode.com/problems/longest-valid-parentheses/)
+
+```python
+class Solution:
+  def longestValidParentheses(self, s: str) -> int:
+    # brute force, TLE
+    L = len(s)
+    for distance in range(2, L+1, 2)[::-1]:
+      for i in range(L-distance+1):
+        if isValid(s[i:i+distance]):
+          return distance
+    return 0
+
+def isValid(s):
+  stack = []
+  for c in s:
+    if '(' == c:
+      stack.append(c)
+    else:
+      if not stack or stack.pop() != '(':
+        return False
+  return len(stack) == 0
+
+
+class Solution:
+  def longestValidParentheses(self, s: str) -> int:
+    ans = 0
+    dp = [0] * len(s)
+    for i in range(1, len(s)):
+      if s[i] == ')':
+        if s[i-1] == '(':
+          dp[i] = dp[max(i-2, 0)] + 2
+        elif i - dp[i - 1] > 0 and s[i-1-dp[i-1]] == '(':
+          dp[i] = dp[i-1] + dp[max(i-2-dp[i-1], 0)] + 2
+        ans = max(ans, dp[i])
+    return ans
+```
+
 ## [34. Find First and Last Position of Element in Sorted Array - Medium](https://leetcode.com/problems/find-first-and-last-position-of-element-in-sorted-array/)
 
 ```python
