--- a/1-50.md
+++ b/1-50.md
@@ -1,3 +1,37 @@
+## [15. 3Sum - Medium](https://leetcode.com/problems/3sum/)
+
+- Avoid duplicates, +1 or -1
+  - `nums[left-1] == nums[left]`
+  - `nums[mid] == nums[mid+1]`
+
+```python
+class Solution:
+  def threeSum(self, nums: List[int]) -> List[List[int]]:
+    LEN = len(nums)
+    nums.sort()
+    ans = []
+    for left, left_val in enumerate(nums):
+      if left_val > 0: break
+      if left != 0 and nums[left-1] == left_val: continue
+
+      mid, right = left + 1, LEN - 1
+      while mid < right:
+        s = left_val + nums[mid] + nums[right]
+        if s > 0:
+          right -= 1
+        elif s < 0:
+          mid += 1
+        else:
+          ans.append([left_val, nums[mid], nums[right]])
+          while mid < right and nums[mid] == nums[mid+1]:
+            mid += 1
+          while mid < right and nums[right] == nums[right - 1]:
+            right -= 1
+          mid += 1
+          right -= 1
+    return ans
+```
+
 ## [20. Valid Parentheses - Easy](https://leetcode.com/problems/valid-parentheses/)
 
 ```python
@@ -51,8 +85,9 @@ class Solution:
       dividend -= divisor
       ans += 1
     return symbol * ans
+```
 
-
+```python
 class Solution:
   def divide(self, dividend: int, divisor: int) -> int:
     symbol = -1 if dividend * divisor < 0 else 1
@@ -95,8 +130,9 @@ def isValid(s):
       if not stack or stack.pop() != '(':
         return False
   return len(stack) == 0
+```
 
-
+```python
 class Solution:
   def longestValidParentheses(self, s: str) -> int:
     ans = 0
@@ -125,8 +161,9 @@ class Solution:
       return [-1, -1]
     right_idx = bisect.bisect_right(nums, target) - 1
     return [left_idx, right_idx]
+```
 
-
+```python
 class Solution:
   def searchRange(self, nums: List[int], target: int) -> List[int]:
     ans = [-1, -1]
