--- a/101-150.md
+++ b/101-150.md
@@ -36,9 +36,10 @@ class Solution:
       return False
 
     return dfs(s, 0)
+```
 
 
-
+```python
 class Solution:
   def wordBreak(self, s: str, wordDict: List[str]) -> bool:
     # Check if wordDict contains all necessary chars
