--- a/201-250.md
+++ b/201-250.md
@@ -24,8 +24,9 @@ class Solution:
 
           ans = max(ans, dp[row][col])
     return ans**2
+```
 
-
+```python
 # Space optimization, just use two rows
 class Solution:
   def maximalSquare(self, matrix: List[List[str]]) -> int:
@@ -65,9 +66,9 @@ class Solution:
     for i in range(len(nums)):
       ans[i] = functools.reduce(lambda x, y: x*y, nums[0:i] + nums[i+1:], 1)
     return ans
+```
 
-
-
+```python
 class Solution:
   def productExceptSelf(self, nums: List[int]) -> List[int]:
     # [Accept] Count "0" element. Three different situations. Use division
@@ -94,9 +95,9 @@ class Solution:
     for i, n in enumerate(nums):
       ans[i] = product // n
     return ans
+```
 
-
-
+```python
 class Solution:
   def productExceptSelf(self, nums: List[int]) -> List[int]:
     # [Accept] Two passes
