--- a/651-700.md
+++ b/651-700.md
@@ -10,8 +10,9 @@ class Solution:
       h.sort(key=lambda item: (-item[1], item[0]))
       ans = [item[0] for item in h[:k]]
       return ans
+```
 
-
+```python
 import collections
 import heapq
 
