--- a/1-50.md
+++ b/1-50.md
@@ -32,6 +32,31 @@ class Solution:
     return ans
 ```
 
+## [16. 3Sum Closest - Medium](https://leetcode.com/problems/3sum-closest/)
+
+```python
+class Solution:
+    def threeSumClosest(self, nums: List[int], target: int) -> int:
+        nums.sort()
+        diff = float('inf')
+        for left in range(len(nums)-2):
+          if nums[left] + nums[left+1] + nums[left+2] - target > abs(diff):
+            break
+          mid, right = left + 1, len(nums) - 1
+          while mid < right:
+            s = nums[left] + nums[mid] + nums[right]
+            cur_diff = s - target
+            if abs(cur_diff) < abs(diff):
+              diff = cur_diff
+            if s < target:
+              mid += 1
+            elif s > target:
+              right -= 1
+            else:
+              return s
+        return target + diff
+```
+
 ## [20. Valid Parentheses - Easy](https://leetcode.com/problems/valid-parentheses/)
 
 ```python
