--- a/1-50.md
+++ b/1-50.md
@@ -211,3 +211,23 @@ class Solution:
     ans[1] = hi
     return ans
 ```
+
+## [39. Combination Sum - Medium](https://leetcode.com/problems/combination-sum/)
+
+```python
+class Solution:
+  def combinationSum(self, candidates: List[int], target: int) -> List[List[int]]:
+    candidates.sort()
+    ans = []
+    def helper(idx, cur_sum, tmp_list):
+      if cur_sum == target:
+        ans.append(tmp_list[:])
+      elif cur_sum > target:
+        return
+      for i, v in enumerate(candidates[idx:]):
+        tmp_list.append(v)
+        helper(idx+i, cur_sum+v, tmp_list)
+        tmp_list.pop()
+    helper(0, 0, [])
+    return ans
+```
