40. Combination Sum II

--- a/1-50.md
+++ b/1-50.md
@@ -231,3 +231,27 @@ class Solution:
     helper(0, 0, [])
     return ans
 ```
+
+## [40. Combination Sum II - Medium](https://leetcode.com/problems/combination-sum-ii/)
+
+```python
+class Solution:
+  def combinationSum2(self, candidates: List[int], target: int) -> List[List[int]]:
+    candidates.sort()
+    ans = []
+    def helper(idx, cur_sum, tmp_list):
+      if cur_sum == target:
+        ans.append(tmp_list[:])
+      elif cur_sum > target:
+        return
+      for i in range(idx, len(candidates)):
+        if i > idx and candidates[i] == candidates[i-1]: continue  # avoid dup
+        v = candidates[i]
+        if v > target:
+          break
+        tmp_list.append(v)
+        helper(i+1, cur_sum+v, tmp_list)
+        tmp_list.pop()
+    helper(0, 0, [])
+    return ans
+```
