--- a/51-100.md
+++ b/51-100.md
@@ -34,3 +34,22 @@ class Solution:
             height[col] * (right_boundary[col] - left_boundary[col] + 1))
     return ans
 ```
+
+## [91. Decode Ways - Medium](https://leetcode.com/problems/decode-ways/)
+
+```python
+class Solution:
+  def numDecodings(self, s: str) -> int:
+    dp = [0] * (len(s) + 1)
+    if s[0] == '0':
+      return 0
+    dp[0], dp[1] = 1, 1
+    for i in range(1, len(s)):
+      unit = int(s[i])
+      if unit != 0:
+        dp[i+1] += dp[i]
+      ten = int(s[i-1:i+1])
+      if ten >= 10 and ten <= 26:
+        dp[i+1] += dp[i-1]
+    return dp[-1]
+```
