--- a/1-50.md
+++ b/1-50.md
@@ -57,6 +57,39 @@ class Solution:
         return target + diff
 ```
 
+## [17. Letter Combinations of a Phone Number - Medium](https://leetcode.com/problems/letter-combinations-of-a-phone-number/)
+
+```python
+class Solution:
+  mapping = {
+    '2': 'abc',
+    '3': 'def',
+    '4': 'ghi',
+    '5': 'jkl',
+    '6': 'mno',
+    '7': 'pqrs',
+    '8': 'tuv',
+    '9': 'wxyz'
+  }
+
+  def letterCombinations(self, digits: str) -> List[str]:
+    if not digits:
+      return []
+    LEN = len(digits)
+    ans = []
+    tmp = [''] * LEN
+    def helper(idx):
+      if idx == LEN:
+        ans.append(''.join(tmp))
+        return
+
+      for c in self.mapping[digits[idx]]:
+        tmp[idx] = c
+        helper(idx+1)
+    helper(0)
+    return ans
+```
+
 ## [20. Valid Parentheses - Easy](https://leetcode.com/problems/valid-parentheses/)
 
 ```python
