215. Kth Largest Element in an Array

--- a/201-250.md
+++ b/201-250.md
@@ -1,3 +1,59 @@
+## [215. Kth Largest Element in an Array - Medium](https://leetcode.com/problems/kth-largest-element-in-an-array/)
+
+```python
+# brute force
+class Solution:
+  def findKthLargest(self, nums: List[int], k: int) -> int:
+    return sorted(nums)[-k]
+```
+
+```python
+# heap
+import heapq
+
+class Solution:
+  def findKthLargest(self, nums: List[int], k: int) -> int:
+    heap = []
+    for n in nums:
+      heapq.heappush(heap, n)
+      if len(heap) > k:
+        heapq.heappop(heap)
+    return heap[0]
+```
+
+```python
+# quickselection
+# average time complexity: O(n)
+# worst case time complexity: O(n^2)
+import random
+
+class Solution:
+  def findKthLargest(self, nums: List[int], k: int) -> int:
+    return self.findKthSmallest(nums, len(nums) - k)
+
+  def findKthSmallest(self, nums, k):
+    cur_k = self.partition(nums)
+    if cur_k == k:
+      return nums[cur_k]
+    elif cur_k > k:
+      return self.findKthSmallest(nums[:cur_k], k)
+    return self.findKthSmallest(nums[cur_k+1:], k - cur_k - 1)
+
+  def partition(self, nums):
+    # randomize
+    random_idx = random.randint(0, len(nums)-1)
+    nums[random_idx], nums[-1] = nums[-1], nums[random_idx]
+
+    pivot = nums[-1]
+    i = 0
+    for j in range(len(nums)-1):
+      if nums[j] < pivot:
+        nums[i], nums[j] = nums[j], nums[i]
+        i += 1
+    nums[i], nums[-1] = nums[-1], nums[i]
+    return i
+```
+
 ## [221. Maximal Square - Medium](https://leetcode.com/problems/maximal-square/)
 
 ```python
