56. Merge Intervals - Medium

--- a/51-100.md
+++ b/51-100.md
@@ -1,3 +1,20 @@
+## [56. Merge Intervals - Medium](https://leetcode.com/problems/merge-intervals/)
+
+```python
+class Solution:
+  def merge(self, intervals: List[List[int]]) -> List[List[int]]:
+    if not intervals:
+      return []
+    intervals.sort(key=lambda x: x[0])
+    ans = [intervals[0]]
+    for start, end in intervals[1:]:
+      if start <= ans[-1][1]:
+        ans[-1][1] = max(ans[-1][1], end)
+      else:
+        ans.append([start, end])
+    return ans
+```
+
 ## [85. Maximal Rectangle - Hard](https://leetcode.com/problems/maximal-rectangle/)
 
 ```python
