--- a/101-150.md
+++ b/101-150.md
@@ -66,3 +66,36 @@ class Solution:
 
     return dfs(s, 0)
 ```
+
+## [143. Reorder List - Medium](https://leetcode.com/problems/reorder-list/)
+
+```python
+# Definition for singly-linked list.
+# class ListNode:
+#     def __init__(self, val=0, next=None):
+#         self.val = val
+#         self.next = next
+class Solution:
+  def reorderList(self, head: ListNode) -> None:
+    """
+    Do not return anything, modify head in-place instead.
+    """
+    # slow and fast pointer to get two parts
+    if not head:
+      return
+    slow = fast = head
+    while fast and fast.next:
+      slow = slow.next
+      fast = fast.next.next
+
+    # reverse latter part
+    pre, cur = None, slow.next
+    while cur:
+      pre, cur.next, cur = cur, pre, cur.next
+
+    slow.next = None
+    # needle
+    first, second = head, pre
+    while first and second:
+      second.next, first.next, first, second = first.next, second, first.next, second.next
+```
