--- a/251-300.md
+++ b/251-300.md
@@ -19,3 +19,57 @@ class Solution:
 
     return ans
 ```
+
+## [297. Serialize and Deserialize Binary Tree - Hard](https://leetcode.com/problems/serialize-and-deserialize-binary-tree/)
+
+```python
+# Definition for a binary tree node.
+# class TreeNode(object):
+#     def __init__(self, x):
+#         self.val = x
+#         self.left = None
+#         self.right = None
+
+class Codec:
+
+    def serialize(self, root):
+        """Encodes a tree to a single string.
+
+        :type root: TreeNode
+        :rtype: str
+        """
+        output = []
+        def traverse(node):
+          if not node:
+            output.append('#')
+            return
+          output.append(str(node.val))
+          traverse(node.left)
+          traverse(node.right)
+
+        traverse(root)
+        return ','.join(output)
+
+    def deserialize(self, data):
+        """Decodes your encoded data to tree.
+
+        :type data: str
+        :rtype: TreeNode
+        """
+        l = data.split(',')
+        def construct(vals):
+          val = vals.pop()
+          if val == '#':
+            return None
+          node = TreeNode(int(val))
+          node.left = construct(vals)
+          node.right = construct(vals)
+          return node
+
+        return construct(l[::-1])
+
+
+# Your Codec object will be instantiated and called as such:
+# codec = Codec()
+# codec.deserialize(codec.serialize(root))
+```
