--- a/101-150.md
+++ b/101-150.md
@@ -1,3 +1,21 @@
+## [105. Construct Binary Tree from Preorder and Inorder Traversal - Medium](https://leetcode.com/problems/construct-binary-tree-from-preorder-and-inorder-traversal/)
+
+```python
+class Solution:
+  def buildTree(self, preorder: List[int], inorder: List[int]) -> TreeNode:
+    def helper(pre_ord, in_ord):
+      if not in_ord:
+        return None
+      val = pre_ord.pop()
+      idx = in_ord.index(val)
+      node = TreeNode(val)
+      node.left = helper(pre_ord, in_ord[:idx])
+      node.right = helper(pre_ord, in_ord[idx+1:])
+      return node
+    # reverse preorder, so we can just pop
+    return helper(preorder[::-1], inorder)
+```
+
 ## [139. Word Break - Medium](https://leetcode.com/problems/word-break/)
 
 ```python
