106. Construct Binary Tree from Inorder and ...

--- a/101-150.md
+++ b/101-150.md
@@ -16,6 +16,25 @@ class Solution:
     return helper(preorder[::-1], inorder)
 ```
 
+## [106. Construct Binary Tree from Inorder and Postorder Traversal - Medium](https://leetcode.com/problems/construct-binary-tree-from-inorder-and-postorder-traversal/)
+
+- Reversed postorder is very similar to the preorder
+
+```python
+class Solution:
+  def buildTree(self, inorder: List[int], postorder: List[int]) -> TreeNode:
+    def helper(post_ord, in_ord):
+      if not in_ord:
+        return None
+      val = post_ord.pop()
+      idx = in_ord.index(val)
+      node = TreeNode(val)
+      node.right = helper(post_ord, in_ord[idx+1:])
+      node.left = helper(post_ord, in_ord[:idx])
+      return node
+    return helper(postorder, inorder)
+```
+
 ## [139. Word Break - Medium](https://leetcode.com/problems/word-break/)
 
 ```python
