94. Binary Tree Inorder Traversal

--- a/51-100.md
+++ b/51-100.md
@@ -70,3 +70,24 @@ class Solution:
         dp[i+1] += dp[i-1]
     return dp[-1]
 ```
+
+## [94. Binary Tree Inorder Traversal - Medium](https://leetcode.com/problems/binary-tree-inorder-traversal/)
+
+```python
+# Iteration
+class Solution:
+  def inorderTraversal(self, root: TreeNode) -> List[int]:
+    ans, stack = [], []
+    cur = root
+    while cur or stack:
+      while cur:
+        stack.append(cur)
+        cur = cur.left
+
+      cur = stack.pop()
+      ans.append(cur.val)
+      cur = cur.right
+    return ans
+
+
+```
