144. Binary Tree Preorder Traversal

--- a/101-150.md
+++ b/101-150.md
@@ -136,3 +136,19 @@ class Solution:
     while first and second:
       second.next, first.next, first, second = first.next, second, first.next, second.next
 ```
+
+## [144. Binary Tree Preorder Traversal - Medium](https://leetcode.com/problems/binary-tree-preorder-traversal/)
+
+```python
+class Solution:
+  def preorderTraversal(self, root: TreeNode) -> List[int]:
+    ans, stack = [], [root]
+    while stack:
+      cur = stack.pop()
+      if not cur:
+        continue
+      ans.append(cur.val)
+      stack.append(cur.right)
+      stack.append(cur.left)
+    return ans
+```
