--- a/101-150.md
+++ b/101-150.md
@@ -152,3 +152,19 @@ class Solution:
       stack.append(cur.left)
     return ans
 ```
+
+## [145. Binary Tree Postorder Traversal - Hard](https://leetcode.com/problems/binary-tree-postorder-traversal/)
+
+```python
+class Solution:
+  def postorderTraversal(self, root: TreeNode) -> List[int]:
+    ans, stack = [], [root]
+    while stack:
+      cur = stack.pop()
+      if not cur:
+        continue
+      ans.append(cur.val)
+      stack.append(cur.left)
+      stack.append(cur.right)
+    return ans[::-1]
+```
