96. Unique Binary Search Trees

--- a/51-100.md
+++ b/51-100.md
@@ -89,3 +89,37 @@ class Solution:
       cur = cur.right
     return ans
 ```
+
+## [96. Unique Binary Search Trees - Medium](https://leetcode.com/problems/unique-binary-search-trees/)
+
+```python
+# top-down memorization
+class Solution:
+  def numTrees(self, n: int) -> int:
+    memo = {0: 1, 1: 1}
+    def helper(k):
+      if k in memo:
+        return memo[k]
+      cnt = 0
+      for i in range(k):
+        left, right = i, k - i - 1
+        left_cnt = helper(left)
+        right_cnt = helper(right)
+        cnt += left_cnt * right_cnt
+      memo[k] = cnt
+      return cnt
+
+    return helper(n)
+```
+
+```python
+# buttom-up
+class Solution:
+  def numTrees(self, n: int) -> int:
+    dp = [0] * (n + 1)
+    dp[0], dp[1] = 1, 1
+    for i in range(2, n+1):
+      for j in range(i):
+        dp[i] += dp[j] * dp[i-j-1]
+    return dp[n]
+```
