95. Unique Binary Search Trees II

--- a/51-100.md
+++ b/51-100.md
@@ -90,6 +90,35 @@ class Solution:
     return ans
 ```
 
+## [95. Unique Binary Search Trees II - Medium](https://leetcode.com/problems/unique-binary-search-trees-ii/)
+
+```python
+class Solution:
+  def generateTrees(self, n: int) -> List[TreeNode]:
+    if n < 1:
+      return []
+    memo = {0: None}
+    def helper(start, end):
+      if start > end:
+        return [None]
+      elif (start, end) in memo:
+        return memo[(start, end)]
+      tmp = []
+      for i in range(start, end+1):
+        left_nodes = helper(start, i-1)
+        right_nodes = helper(i+1, end)
+        for ln in left_nodes:
+          for rn in right_nodes:
+            node = TreeNode(i)
+            node.left = ln
+            node.right = rn
+            tmp.append(node)
+      memo[(start, end)] = tmp
+      return tmp
+
+    return helper(1, n)
+```
+
 ## [96. Unique Binary Search Trees - Medium](https://leetcode.com/problems/unique-binary-search-trees/)
 
 ```python
