--- a/451-500.md
+++ b/451-500.md
@@ -20,3 +20,47 @@ class Solution:
       j += 1
     return res
 ```
+
+## [494. Target Sum - Medium](https://leetcode.com/problems/target-sum/)
+
+```python
+# recursion with memorization, top-down
+import collections
+
+class Solution:
+  def findTargetSumWays(self, nums: List[int], S: int) -> int:
+    L = len(nums)
+    memo = collections.defaultdict(dict)
+    def helper(idx, cur_sum):
+      if idx == L:
+        if cur_sum == S:
+          return 1
+        else:
+          return 0
+      elif cur_sum in memo[idx]:
+        return memo[idx][cur_sum]
+
+      cnt = 0
+      cnt += helper(idx+1, cur_sum+nums[idx])
+      cnt += helper(idx+1, cur_sum-nums[idx])
+      memo[idx][cur_sum] = cnt
+      return cnt
+
+    return helper(0, 0)
+```
+
+```python
+# DP, buttom-up
+import collections
+
+class Solution:
+  def findTargetSumWays(self, nums: List[int], S: int) -> int:
+    dp = {0: 1}
+    for n in nums:
+      next_dp = collections.defaultdict(int)
+      for last_sum, cnt in dp.items():
+        next_dp[last_sum+n] += cnt
+        next_dp[last_sum-n] += cnt
+      dp = next_dp
+    return dp.get(S, 0)
+```
