1560. Most Visited Sector in a Circular Track

--- a/1551-1600.md
+++ b/1551-1600.md
@@ -1,4 +1,4 @@
-## [Find Latest Group of Size M - Medium](https://leetcode.com/problems/find-latest-group-of-size-m/)
+## [1562. Find Latest Group of Size M - Medium](https://leetcode.com/problems/find-latest-group-of-size-m/)
 
 ```python
 import collections
@@ -17,5 +17,20 @@ class Solution:
       cnt[right_len] -= 1
       if cnt[m]:
         ans = i + 1
+    return ans
+```
+
+## [1560. Most Visited Sector in a Circular Track - Easy](https://leetcode.com/problems/most-visited-sector-in-a-circular-track/)
+
+- only the first element and the last element matters
+
+```python
+class Solution:
+  def mostVisited(self, n: int, rounds: List[int]) -> List[int]:
+    fr, to = rounds[0], rounds[-1]
+    if to >= fr:
+      ans = list(range(fr, to+1))
+    else:
+      ans = list(range(1, to+1)) + list(range(fr, n+1))
     return ans
 ```
