99. Recover Binary Search Tree

--- a/51-100.md
+++ b/51-100.md
@@ -152,3 +152,34 @@ class Solution:
         dp[i] += dp[j] * dp[i-j-1]
     return dp[n]
 ```
+
+## [99. Recover Binary Search Tree - Hard](https://leetcode.com/problems/recover-binary-search-tree/)
+
+- Think about this is not a tree, just a sorted array with two elements swapped. Then use in-order traverse to iterate each element in the array.
+
+``` python
+class Solution:
+  def recoverTree(self, root: TreeNode) -> None:
+    """
+    Do not return anything, modify root in-place instead.
+    """
+    self.first = self.second = None
+    self.prev = TreeNode(float('-inf'))
+    def traverse(node):
+      if not node:
+        return
+      traverse(node.left)
+
+      if not self.first and self.prev.val >= node.val:
+        self.first = self.prev
+
+      if self.first and self.prev.val >= node.val:
+        self.second = node
+
+      self.prev = node
+
+      traverse(node.right)
+
+    traverse(root)
+    self.first.val, self.second.val = self.second.val, self.first.val
+```
