117. Populating Next Right Pointers in Each Node II

--- a/101-150.md
+++ b/101-150.md
@@ -35,6 +35,55 @@ class Solution:
     return helper(postorder, inorder)
 ```
 
+## [117. Populating Next Right Pointers in Each Node II - Medium](https://leetcode.com/problems/populating-next-right-pointers-in-each-node-ii/)
+
+```python
+class Solution:
+  def connect(self, root: 'Node') -> 'Node':
+    if not root:
+      return None
+    level = [root]
+    while level:
+      next_level = []
+      for i in range(len(level)):
+        cur_node = level[i]
+        if cur_node.left:
+          next_level.append(cur_node.left)
+        if cur_node.right:
+          next_level.append(cur_node.right)
+
+        if i < len(level) - 1:
+          level[i].next = level[i+1]
+      level = next_level
+    return root
+```
+
+```python
+# constant space
+class Solution:
+  def connect(self, root: 'Node') -> 'Node':
+    self.level_start = root
+
+    while self.level_start:
+      cur = self.level_start
+      self.prev = self.level_start = None
+      while cur:
+        self.connect_child(cur.left)
+        self.connect_child(cur.right)
+        cur = cur.next
+
+    return root
+
+  def connect_child(self, node):
+    if not node:
+      return
+    if self.prev == None:
+      self.level_start = node
+    else:
+      self.prev.next = node
+    self.prev = node
+```
+
 ## [139. Word Break - Medium](https://leetcode.com/problems/word-break/)
 
 ```python
