236. Lowest Common Ancestor of a Binary Tree

--- a/201-250.md
+++ b/201-250.md
@@ -108,6 +108,46 @@ class Solution:
     return ans**2
 ```
 
+## [236. Lowest Common Ancestor of a Binary Tree - Medium](https://leetcode.com/problems/lowest-common-ancestor-of-a-binary-tree/)
+
+```python
+# assumption: p and q must be in the tree
+class Solution:
+  def lowestCommonAncestor(self, root: 'TreeNode', p: 'TreeNode', q: 'TreeNode') -> 'TreeNode':
+    if not root:
+      return None
+    elif root == p or root == q:
+      return root
+
+    left = self.lowestCommonAncestor(root.left, p, q)
+    right = self.lowestCommonAncestor(root.right, p, q)
+    if left and right:
+      return root
+    return left or right
+```
+
+```python
+# return None if p or q or both not in the tree
+class Solution:
+  def lowestCommonAncestor(self, root: 'TreeNode', p: 'TreeNode', q: 'TreeNode') -> 'TreeNode':
+    self.ans = None
+    def traverse(node):
+      if not node:
+        return 0
+
+      left = traverse(node.left)
+      right = traverse(node.right)
+      mid = 1 if node == p or node == q else 0
+
+      if left + mid + right >= 2:
+        self.ans = node
+
+      return max(left, mid, right)
+
+    traverse(root)
+    return self.ans
+```
+
 ## [238. Product of Array Except Self - Medium](https://leetcode.com/problems/product-of-array-except-self/)
 
 ```python
