124. Binary Tree Maximum Path Sum

--- a/101-150.md
+++ b/101-150.md
@@ -84,6 +84,27 @@ class Solution:
     self.prev = node
 ```
 
+## [124. Binary Tree Maximum Path Sum - Hard](https://leetcode.com/problems/binary-tree-maximum-path-sum/)
+
+```python
+class Solution:
+  def maxPathSum(self, root: TreeNode) -> int:
+    self.ans = root.val
+
+    def traverse(node):
+      if not node:
+        return 0
+      left = max(traverse(node.left), 0)
+      right = max(traverse(node.right), 0)
+      s = mid = node.val
+      s += left + right
+      self.ans = max(self.ans, s)
+      return mid + max(left, right)
+
+    traverse(root)
+    return self.ans
+```
+
 ## [139. Word Break - Medium](https://leetcode.com/problems/word-break/)
 
 ```python
