129. Sum Root to Leaf Numbers

--- a/101-150.md
+++ b/101-150.md
@@ -105,6 +105,26 @@ class Solution:
     return self.ans
 ```
 
+## [129. Sum Root to Leaf Numbers - Medium](https://leetcode.com/problems/sum-root-to-leaf-numbers/)
+
+```python
+class Solution:
+  def sumNumbers(self, root: TreeNode) -> int:
+    nums = []
+    def traverse(node, s):
+      if not node:
+        return
+      elif not node.left and not node.right:
+        nums.append(s*10 + node.val)
+        return
+      s = s*10 + node.val
+      traverse(node.left, s)
+      traverse(node.right, s)
+
+    traverse(root, 0)
+    return sum(nums)
+```
+
 ## [139. Word Break - Medium](https://leetcode.com/problems/word-break/)
 
 ```python
