--- a/251-300.md
+++ b/251-300.md
@@ -20,6 +20,44 @@ class Solution:
     return ans
 ```
 
+## [269. Alien Dictionary - Hard](https://leetcode.com/problems/alien-dictionary/)
+
+```python
+# topology sort
+import collections
+
+class Solution:
+  def alienOrder(self, words: List[str]) -> str:
+    next_map = collections.defaultdict(set)
+    in_degree = collections.defaultdict(int)
+    for w1, w2 in zip(words, words[1:]):
+      for c1, c2 in zip(w1, w2):
+        if c1 != c2:
+          if c2 not in next_map[c1]:
+            next_map[c1].add(c2)
+            in_degree[c2] += 1
+          break
+      else:
+        # check if w2 is the prefix of w1
+        if len(w1) > len(w2): return ''
+
+    chars = set(''.join(words))
+    q = collections.deque([c for c in chars if in_degree[c] == 0])
+
+    ans = []
+    while q:
+      c = q.popleft()
+      ans.append(c)
+      for nex in next_map[c]:
+        in_degree[nex] -= 1
+        if in_degree[nex] == 0:
+          q.append(nex)
+
+    if len(ans) == len(chars):
+      return ''.join(ans)
+    return ''
+```
+
 ## [297. Serialize and Deserialize Binary Tree - Hard](https://leetcode.com/problems/serialize-and-deserialize-binary-tree/)
 
 ```python
