310. Minimum Height Trees

--- a/301-350.md
+++ b/301-350.md
@@ -1,3 +1,31 @@
+## [310. Minimum Height Trees - Medium](https://leetcode.com/problems/minimum-height-trees/)
+
+```python
+import collections
+
+class Solution:
+  def findMinHeightTrees(self, n: int, edges: List[List[int]]) -> List[int]:
+    if n == 1:
+      return [0]
+    graph = collections.defaultdict(set)
+    for l, r in edges:
+      graph[l].add(r)
+      graph[r].add(l)
+
+    layer = [i for i in range(n) if len(graph[i]) == 1]
+
+    while True:
+      cur = []
+      for node in layer:
+        for neigh in graph[node]:
+          graph[neigh].remove(node)
+          if len(graph[neigh]) == 1:
+            cur.append(neigh)
+      if not cur:
+        return layer
+      layer = cur
+```
+
 ## [332. Reconstruct Itinerary - Medium](https://leetcode.com/problems/reconstruct-itinerary/)
 
 ```python
