--- a/201-250.md
+++ b/201-250.md
@@ -210,3 +210,35 @@ class Solution:
       tmp *= nums[i]
     return ans
 ```
+
+## [239. Sliding Window Maximum - Hard](https://leetcode.com/problems/sliding-window-maximum/)
+
+```python
+# brute force, TLE
+class Solution:
+  def maxSlidingWindow(self, nums: List[int], k: int) -> List[int]:
+    ans = []
+    for i in range(len(nums) - k + 1):
+      ans.append(max(nums[i:i+k]))
+    return ans
+```
+
+```python
+from collections import deque
+
+class Solution:
+  def maxSlidingWindow(self, nums: List[int], k: int) -> List[int]:
+    if not nums or k == 0:
+      return []
+    q = deque()  # store index, not val
+    ans = []
+    for i in range(len(nums)):
+      while q and q[0] < i - k + 1:
+        q.popleft()
+      while q and nums[q[-1]] < nums[i]:
+        q.pop()
+      q.append(i)
+      if i >= k - 1:
+        ans.append(nums[q[0]])
+    return ans
+```
