--- a/201-250.md
+++ b/201-250.md
@@ -1,3 +1,33 @@
+## [207. Course Schedule - Medium](https://leetcode.com/problems/course-schedule/)
+
+```python
+from collections import defaultdict
+
+class Solution:
+  def canFinish(self, numCourses: int, prerequisites: List[List[int]]) -> bool:
+    taken = [False] * numCourses
+    dependency = defaultdict(list)
+    for course, prereq in prerequisites:
+      dependency[course].append(prereq)
+
+    def tryTake(n, pending):
+      if taken[n]:
+        return True
+
+      pending.add(n)
+      for pre in dependency[n]:
+        if pre in pending or not tryTake(pre, pending):
+          return False
+      pending.remove(n)
+      taken[n] = True
+      return True
+
+    for n in range(numCourses):
+      if not tryTake(n, set()):
+        return False
+    return True
+```
+
 ## [215. Kth Largest Element in an Array - Medium](https://leetcode.com/problems/kth-largest-element-in-an-array/)
 
 ```python
