210. Course Schedule II

--- a/201-250.md
+++ b/201-250.md
@@ -28,6 +28,39 @@ class Solution:
     return True
 ```
 
+## [210. Course Schedule II - Medium](https://leetcode.com/problems/course-schedule-ii/)
+
+```python
+from collections import defaultdict
+
+class Solution:
+  def findOrder(self, numCourses: int, prerequisites: List[List[int]]) -> bool:
+    taken = [False] * numCourses
+    dependency = defaultdict(list)
+    for course, prereq in prerequisites:
+      dependency[course].append(prereq)
+
+    self.order = []
+
+    def tryTake(n, pending):
+      if taken[n]:
+        return True
+
+      pending.add(n)
+      for pre in dependency[n]:
+        if pre in pending or not tryTake(pre, pending):
+          return False
+      pending.remove(n)
+      taken[n] = True
+      self.order.append(n)
+      return True
+
+    for n in range(numCourses):
+      if not tryTake(n, set()):
+        return []
+    return self.order
+```
+
 ## [215. Kth Largest Element in an Array - Medium](https://leetcode.com/problems/kth-largest-element-in-an-array/)
 
 ```python
