--- a/351-400.md
+++ b/351-400.md
@@ -46,3 +46,37 @@ class Solution:
         cur_str = [pre_str + pre_k * ''.join(cur_str)]
     return ''.join(cur_str)
 ```
+
+## [399. Evaluate Division - Medium](https://leetcode.com/problems/evaluate-division/)
+
+```python
+from collections import defaultdict
+
+class Solution:
+  def calcEquation(self, equations: List[List[str]], values: List[float], queries: List[List[str]]) -> List[float]:
+    graph = defaultdict(dict)
+    for (dividend, divisor), val in zip(equations, values):
+      graph[dividend][divisor] = val
+      graph[divisor][dividend] = 1/val
+
+    def compute(start, end):
+      if start not in graph or end not in graph:
+        return -1.0
+
+      seen = set([start])
+      stack = [(start, 1.0)]
+      while stack:
+        node, val = stack.pop()
+        if node == end:
+          return val
+        for neigh, factor in graph[node].items():
+          if neigh not in seen:
+            stack.append([neigh, val * factor])
+            seen.add(neigh)
+      return -1.0
+
+    ans = []
+    for start, end in queries:
+      ans.append(compute(start, end))
+    return ans
+```
