785. Is Graph Bipartite?

--- a/751-800.md
+++ b/751-800.md
@@ -45,3 +45,25 @@ class Solution:
         start = i + 1
     return ans
 ```
+
+## [785. Is Graph Bipartite? - Medium](https://leetcode.com/problems/is-graph-bipartite/)
+
+```python
+class Solution:
+  def isBipartite(self, graph: List[List[int]]) -> bool:
+    color_map = [-1] * len(graph)
+    for i in range(len(graph)):
+      if color_map[i] != -1:
+        continue
+      stack = [(i, 0)]
+      while stack:
+        i, color = stack.pop()
+        other_color = color^1
+        for neigh in graph[i]:
+          if color_map[neigh] == -1:
+            stack.append((neigh, other_color))
+            color_map[neigh] = other_color
+          elif color_map[neigh] == color:
+            return False
+    return True
+```
