--- a/851-900.md
+++ b/851-900.md
@@ -32,3 +32,35 @@ class Solution:
       k += 1
     return [node.val for node in q]
 ```
+
+## [886. Possible Bipartition - Medium](https://leetcode.com/problems/possible-bipartition/)
+
+```python
+from collections import defaultdict
+
+class Solution:
+  def possibleBipartition(self, N: int, dislikes: List[List[int]]) -> bool:
+    graph = defaultdict(set)
+    for fr, to in dislikes:
+      graph[fr].add(to)
+      graph[to].add(fr)
+
+    color_map = [-1] * (N + 1)
+
+    for i in range(1, N+1):
+      if color_map[i] != -1:
+        continue
+      stack = [i]
+      color_map[i] = 0
+      while stack:
+        cur = stack.pop()
+        color = color_map[cur]
+        other_color = color ^ 1
+        for neigh in graph[cur]:
+          if color_map[neigh] == -1:
+            color_map[neigh] = other_color
+            stack.append(neigh)
+          elif color_map[neigh] == color:
+            return False
+    return True
+```
