253. Meeting Rooms II

--- a/251-300.md
+++ b/251-300.md
@@ -1,3 +1,21 @@
+## [253. Meeting Rooms II - Medium](https://leetcode.com/problems/meeting-rooms-ii/)
+
+```python
+import heapq
+
+class Solution:
+  def minMeetingRooms(self, intervals: List[List[int]]) -> int:
+    if not intervals:
+      return 0
+    intervals.sort()
+    h = [intervals[0][1]]
+    for s, e in intervals[1:]:
+      if s >= h[0]:
+        heapq.heappop(h)
+      heapq.heappush(h, e)
+    return len(h)
+```
+
 ## [259. 3Sum Smaller - Medium](https://leetcode.com/problems/3sum-smaller/)
 
 ```python
