--- a/201-250.md
+++ b/201-250.md
@@ -171,6 +171,36 @@ class Solution:
     return ans**2
 ```
 
+## [224. Basic Calculator - Hard](https://leetcode.com/problems/basic-calculator/)
+
+```python
+class Solution:
+  def calculate(self, s: str) -> int:
+    stack, result, sign = [], 0, 1
+    i, L = 0, len(s)
+    while i < L:
+      c = s[i]
+      if c.isdigit():
+        tmp = int(c)
+        while i+1 < L and s[i+1].isdigit():
+          i += 1
+          tmp = 10*tmp + int(s[i])
+        result += tmp * sign
+      elif c == '+':
+        sign = 1
+      elif c == '-':
+        sign = -1
+      elif c == '(':
+        stack.append(result)
+        stack.append(sign)
+        result, sign = 0, 1
+      elif c == ')':
+        result = stack.pop() * result + stack.pop()
+      i += 1
+
+    return result
+```
+
 ## [236. Lowest Common Ancestor of a Binary Tree - Medium](https://leetcode.com/problems/lowest-common-ancestor-of-a-binary-tree/)
 
 ```python
