946. Validate Stack Sequences - Medium

--- a/901-950.md
+++ b/901-950.md
@@ -46,3 +46,18 @@ class Solution:
     nums[i], nums[tail] = nums[tail], nums[i]
     return i
 ```
+
+## [946. Validate Stack Sequences - Medium](https://leetcode.com/problems/validate-stack-sequences/)
+
+```python
+class Solution:
+  def validateStackSequences(self, pushed: List[int], popped: List[int]) -> bool:
+    stack = []
+    j = 0
+    for n in pushed:
+      stack.append(n)
+      while stack and stack[-1] == popped[j]:
+        stack.pop()
+        j += 1
+    return j == len(popped)
+```
