--- a/1-50.md
+++ b/1-50.md
@@ -166,6 +166,28 @@ class Solution:
     return symbol * ans
 ```
 
+## [31. Next Permutation - Medium](https://leetcode.com/problems/next-permutation/)
+
+```python
+# 1, 2, 4, 5, 4, 3
+class Solution:
+  def nextPermutation(self, nums: List[int]) -> None:
+    """
+    Do not return anything, modify nums in-place instead.
+    """
+    i = j = len(nums) - 1
+    while i > 0 and nums[i-1] >= nums[i]:
+      i -= 1
+    if i == 0:
+      nums.reverse()
+      return
+    i -= 1
+    while nums[j] <= nums[i]:
+      j -= 1
+    nums[i], nums[j] = nums[j], nums[i]
+    nums[i+1:] = reversed(nums[i+1:])
+```
+
 ## [32. Longest Valid Parentheses - Hard](https://leetcode.com/problems/longest-valid-parentheses/)
 
 ```python
