843. Guess the Word - Hard

--- a/801-850.md
+++ b/801-850.md
@@ -28,3 +28,42 @@ class Solution:
       j += 1
     return j - idx
 ```
+
+## [843. Guess the Word - Hard](https://leetcode.com/problems/guess-the-word/)
+
+```python
+from collections import defaultdict
+
+import random
+
+LEN = 6
+GUESS_CNT = 10
+
+class Solution:
+  def findSecretWord(self, wordlist: List[str], master: 'Master') -> None:
+    def matchCount(w1, w2):
+      return sum(1 for c1, c2 in zip(w1, w2) if c1 == c2)
+
+    def getMostOverlapWord(wlist):
+      frequency_map = [defaultdict(int) for _ in range(LEN)]
+      for word in wlist:
+        for i, c in enumerate(word):
+          frequency_map[i][c] += 1
+
+      max_frequency = 0
+      for word in wlist:
+        frequency = 0
+        for i, c in enumerate(word):
+          frequency += frequency_map[i][c]
+        if frequency > max_frequency:
+          best_word = word
+          max_frequency = frequency
+      return best_word
+
+    for _ in range(GUESS_CNT):
+      if not wordlist: return
+      guessing_word = getMostOverlapWord(wordlist)
+      cnt = master.guess(guessing_word)
+      if cnt == LEN: return
+      wordlist = [w for w in wordlist if matchCount(w, guessing_word) == cnt]
+```
