76. Minimum Window Substring

--- a/51-100.md
+++ b/51-100.md
@@ -15,6 +15,38 @@ class Solution:
     return ans
 ```
 
+## [76. Minimum Window Substring - Hard](https://leetcode.com/problems/minimum-window-substring/)
+
+```python
+from collections import Counter, defaultdict
+
+class Solution:
+  def minWindow(self, s: str, t: str) -> str:
+    target = Counter(t)
+    counter = defaultdict(int)
+    matched_cnt, total = 0, len(target)
+    left = right = 0
+    start = -1
+    ans = ''
+    while left < len(s):
+      while right < len(s) and matched_cnt < total:
+        cr = s[right]
+        counter[cr] += 1
+        if counter[cr] == target[cr]:
+          matched_cnt += 1
+        right += 1
+      if matched_cnt < total: break
+      while left < len(s) and matched_cnt == total:
+        cl = s[left]
+        counter[cl] -= 1
+        if counter[cl] == target[cl] - 1:
+          matched_cnt -= 1
+          if not ans or right - left < len(ans):
+            ans = s[left:right]
+        left += 1
+    return ans
+```
+
 ## [85. Maximal Rectangle - Hard](https://leetcode.com/problems/maximal-rectangle/)
 
 ```python
