846. Hand of Straights

--- a/801-850.md
+++ b/801-850.md
@@ -41,8 +41,7 @@ GUESS_CNT = 10
 
 class Solution:
   def findSecretWord(self, wordlist: List[str], master: 'Master') -> None:
-    def matchCount(w1, w2):
-      return sum(1 for c1, c2 in zip(w1, w2) if c1 == c2)
+    matchCount = lambda w1, w2: sum(1 for c1, c2 in zip(w1, w2) if c1 == c2)
 
     def getMostOverlapWord(wlist):
       frequency_map = [defaultdict(int) for _ in range(LEN)]
@@ -66,4 +65,54 @@ class Solution:
       cnt = master.guess(guessing_word)
       if cnt == LEN: return
       wordlist = [w for w in wordlist if matchCount(w, guessing_word) == cnt]
+```
+
+## [846. Hand of Straights - Medium](https://leetcode.com/problems/hand-of-straights/)
+
+```python
+from collections import defaultdict
+
+class Solution:
+  def isNStraightHand(self, hand: List[int], W: int) -> bool:
+    if not hand or len(hand) % W:
+      return False
+
+    hand.sort()
+    total_group = len(hand) // W
+    groups = [[] for _ in range(total_group)]
+    dic = defaultdict(list)
+    group_idx = 0
+    for n in hand:
+      if n not in dic or not dic[n]:
+        if group_idx == total_group:
+          return False
+        groups[group_idx].append(n)
+        dic[n+1].append(group_idx)
+        group_idx += 1
+      else:
+        idx = dic[n][-1]
+        groups[idx].append(n)
+        if len(groups[idx]) < W:
+          dic[n+1].append(idx)
+        dic[n].pop()
+    return True
+```
+
+
+```python
+from collections import Counter
+
+class Solution:
+  def isNStraightHand(self, hand: List[int], W: int) -> bool:
+    if not hand or len(hand) % W:
+      return False
+
+    counter = Counter(hand)
+    for n in sorted(counter):
+      if counter[n] > 0:
+        for j in range(W)[::-1]:
+          counter[n+j] -= counter[n]
+          if counter[n+j] < 0:
+            return False
+    return True
 ```
