1566. Detect Pattern of Length M Repeated K ...

--- a/1551-1600.md
+++ b/1551-1600.md
@@ -34,3 +34,15 @@ class Solution:
       ans = list(range(1, to+1)) + list(range(fr, n+1))
     return ans
 ```
+
+## [1566. Detect Pattern of Length M Repeated K or More Times - Easy](https://leetcode.com/problems/detect-pattern-of-length-m-repeated-k-or-more-times/)
+
+```python
+class Solution:
+  def containsPattern(self, arr: List[int], m: int, k: int) -> bool:
+    for i in range(len(arr) - m*k + 1):
+      p = arr[i:i+m]
+      if p * k == arr[i:i+m*k]:
+        return True
+    return False
+```
