--- a/1551-1600.md
+++ b/1551-1600.md
@@ -46,3 +46,27 @@ class Solution:
         return True
     return False
 ```
+
+## [1567. Maximum Length of Subarray With Positive Product - Medium](https://leetcode.com/problems/maximum-length-of-subarray-with-positive-product/)
+
+```python
+class Solution:
+  def getMaxLen(self, nums: List[int]) -> int:
+    max_len, start, is_positive, first_minus_index = 0, 0, True, -1
+    for i, n in enumerate(nums):
+      if n == 0:
+        start, is_positive, first_minus_index = i + 1, True, -1
+      else:
+        if n > 0:
+          if max_len == 0:
+            max_len = 1
+        else:
+          is_positive = not is_positive
+          if first_minus_index == -1:
+            first_minus_index = i
+        if is_positive:
+          max_len = max(max_len, i - start + 1)
+        elif first_minus_index != -1:
+          max_len = max(max_len, i-first_minus_index)
+    return max_len
+```
