1568. Minimum Number of Days to Disconnect ...

--- a/1551-1600.md
+++ b/1551-1600.md
@@ -70,3 +70,45 @@ class Solution:
           max_len = max(max_len, i-first_minus_index)
     return max_len
 ```
+
+## [1568. Minimum Number of Days to Disconnect Island - Medium](https://leetcode.com/problems/minimum-number-of-days-to-disconnect-island/)
+
+- The answer is at most 2
+
+```python
+from copy import deepcopy
+
+class Solution:
+  def minDays(self, grid: List[List[int]]) -> int:
+    if countIsland(deepcopy(grid)) != 1:
+      return 0
+
+    R, C = len(grid), len(grid[0])
+    for r in range(R):
+      for c in range(C):
+        if grid[r][c] == 1:
+          copied = deepcopy(grid)
+          copied[r][c] = 0
+          if countIsland(copied) > 1:
+            return 1
+
+    return 2
+
+
+def countIsland(grid: List[List[int]]) -> int:
+  R, C = len(grid), len(grid[0])
+  def expand(r, c):
+    if r < 0 or c < 0 or r == R or c == C or grid[r][c] == 0:
+      return
+    grid[r][c] = 0
+    expand(r+1, c); expand(r-1, c)
+    expand(r, c+1); expand(r, c-1)
+
+  cnt = 0
+  for r in range(R):
+    for c in range(C):
+      if grid[r][c] == 1:
+        cnt += 1
+        expand(r, c)
+  return cnt
+```
