1569. Number of Ways to Reorder Array to Get ...

--- a/1551-1600.md
+++ b/1551-1600.md
@@ -112,3 +112,21 @@ def countIsland(grid: List[List[int]]) -> int:
         expand(r, c)
   return cnt
 ```
+
+## [1569. Number of Ways to Reorder Array to Get Same BST - Hard](https://leetcode.com/problems/number-of-ways-to-reorder-array-to-get-same-bst/)
+
+```python
+from math import comb
+
+class Solution:
+  def numOfWays(self, nums: List[int]) -> int:
+    M = 10**9 + 7
+    def f(l):
+      if len(l) <= 2:
+        return 1
+      head = l[0]
+      left = [n for n in l[1:] if n < head]
+      right = [n for n in l[1:] if n > head]
+      return (comb(len(left)+len(right), len(left)) * f(left) * f(right)) % M
+    return f(nums) - 1
+```
