--- a/1401-1450.md
+++ b/1401-1450.md
@@ -1,3 +1,17 @@
+## [1423. Maximum Points You Can Obtain from Cards - Medium](https://leetcode.com/problems/maximum-points-you-can-obtain-from-cards/)
+
+```python
+class Solution:
+  def maxScore(self, cardPoints: List[int], k: int) -> int:
+    cur = max_points = sum(cardPoints[:k])
+    l, r = k - 1, len(cardPoints) - 1
+    while l >= 0:
+      cur += cardPoints[r] - cardPoints[l]
+      max_points = max(max_points, cur)
+      l -= 1; r -= 1
+    return max_points
+```
+
 ## [1438. Longest Continuous Subarray With Absolute Diff Less Than or Equal to Limit - Medium](https://leetcode.com/problems/longest-continuous-subarray-with-absolute-diff-less-than-or-equal-to-limit/)
 
 ```python
