659. Split Array into Consecutive Subsequences

--- a/651-700.md
+++ b/651-700.md
@@ -1,3 +1,25 @@
+## [659. Split Array into Consecutive Subsequences - Medium](https://leetcode.com/problems/split-array-into-consecutive-subsequences/)
+
+```python
+from collections import Counter
+
+class Solution:
+  def isPossible(self, nums: List[int]) -> bool:
+    counter = Counter(nums)
+    end = Counter()
+    for n in nums:
+      if counter[n] > 0:
+        if end[n-1] > 0:
+          end[n-1] -= 1; end[n] += 1
+        elif counter[n+1] > 0 and counter[n+2] > 0:
+          counter[n+1] -= 1; counter[n+2] -= 1
+          end[n+2] += 1
+        else:
+          return False
+        counter[n] -= 1
+    return True
+```
+
 ## [692. Top K Frequent Words - Medium](https://leetcode.com/problems/top-k-frequent-words/)
 
 ```python
