528. Random Pick with Weight

--- a/501-550.md
+++ b/501-550.md
@@ -1,3 +1,21 @@
+## [528. Random Pick with Weight - Medium](https://leetcode.com/problems/random-pick-with-weight/)
+
+```python
+import bisect
+import random
+
+from itertools import accumulate
+
+class Solution:
+
+  def __init__(self, w: List[int]):
+    self.acc = list(accumulate(w))
+
+  def pickIndex(self) -> int:
+    random_n = random.randint(1, self.acc[-1])
+    return bisect.bisect_left(self.acc, random_n)
+```
+
 ## [543. Diameter of Binary Tree - Easy](https://leetcode.com/problems/diameter-of-binary-tree/)
 
 ```python
