--- a/751-800.md
+++ b/751-800.md
@@ -31,6 +31,32 @@ class Solution:
     return merge
 ```
 
+## [767. Reorganize String - Medium](https://leetcode.com/problems/reorganize-string/)
+
+```python
+from collections import Counter
+
+import heapq
+
+class Solution:
+  def reorganizeString(self, S: str) -> str:
+    counter = Counter(S)
+    h = []
+    for c, cnt in counter.items():
+      heapq.heappush(h, [-cnt, c])
+
+    slots = [''] * len(S)
+    cnt, c = heapq.heappop(h)
+    if 2*(-cnt) - 1 > len(S):
+      return ''
+    for i in [*range(0, len(S), 2), *range(1, len(S), 2)]:
+      if cnt == 0:
+        cnt, c = heapq.heappop(h)
+      slots[i] = c
+      cnt += 1
+    return ''.join(slots)
+```
+
 ```python
 # smart solution in discussion
 class Solution:
