358. Rearrange String k Distance Apart

--- a/351-400.md
+++ b/351-400.md
@@ -1,3 +1,32 @@
+## [358. Rearrange String k Distance Apart - Hard](https://leetcode.com/problems/rearrange-string-k-distance-apart/)
+
+```python
+from collections import Counter
+
+import heapq
+
+class Solution:
+  def rearrangeString(self, s: str, k: int) -> str:
+    counter, h = Counter(s), []
+    for c, cnt in counter.items():
+      heapq.heappush(h, [-cnt, c])
+
+    slots, waitq = [], []
+    while h:
+      item = heapq.heappop(h)
+      slots.append(item[1])
+      item[0] += 1
+      waitq.append(item)
+
+      if len(waitq) < k:
+        continue
+      while waitq:
+        item = waitq.pop()
+        if item[0] < 0:
+          heapq.heappush(h, item)
+    return '' if len(slots) != len(s) else ''.join(slots)
+```
+
 ## [359. Logger Rate Limiter - Easy](https://leetcode.com/problems/logger-rate-limiter/)
 
 ```python
