--- a/51-100.md
+++ b/51-100.md
@@ -15,6 +15,27 @@ class Solution:
     return ans
 ```
 
+## [72. Edit Distance - Hard](https://leetcode.com/problems/edit-distance/)
+
+```python
+class Solution:
+  def minDistance(self, word1: str, word2: str) -> int:
+    R, C = len(word1), len(word2)
+    dp = [[0] * (C+1) for _ in range(R+1)]
+    for r in range(R+1):
+      dp[r][0] = r
+    for c in range(C+1):
+      dp[0][c] = c
+
+    for r in range(1, R+1):
+      for c in range(1, C+1):
+        if word1[r-1] == word2[c-1]:
+          dp[r][c] = dp[r-1][c-1]
+        else:
+          dp[r][c] = min(dp[r-1][c], dp[r][c-1], dp[r-1][c-1]) + 1
+    return dp[-1][-1]
+```
+
 ## [76. Minimum Window Substring - Hard](https://leetcode.com/problems/minimum-window-substring/)
 
 ```python
