329. Longest Increasing Path in a Matrix

--- a/301-350.md
+++ b/301-350.md
@@ -26,6 +26,33 @@ class Solution:
       layer = cur
 ```
 
+## [329. Longest Increasing Path in a Matrix - Hard](https://leetcode.com/problems/longest-increasing-path-in-a-matrix/)
+
+```python
+class Solution:
+  dirs = [[0, 1], [0, -1], [1, 0], [-1, 0]]
+  def longestIncreasingPath(self, matrix: List[List[int]]) -> int:
+    if not matrix or not matrix[0]:
+      return 0
+    R, C = len(matrix), len(matrix[0])
+    memo = [[0] * C for _ in range(R)]
+    def dfs(r, c):
+      if memo[r][c] != 0:
+        return memo[r][c]
+      for dr, dc in self.dirs:
+        nr, nc = r + dr, c + dc
+        if 0 <= nr < R and 0 <= nc < C and matrix[r][c] > matrix[nr][nc]:
+          memo[r][c] = max(memo[r][c], dfs(nr, nc))
+      memo[r][c] += 1
+      return memo[r][c]
+
+    ans = 0
+    for r in range(R):
+      for c in range(C):
+        ans = max(ans, dfs(r, c))
+    return ans
+```
+
 ## [332. Reconstruct Itinerary - Medium](https://leetcode.com/problems/reconstruct-itinerary/)
 
 ```python
