--- a/1001-1050.md
+++ b/1001-1050.md
@@ -1,3 +1,69 @@
+## [1048. Longest String Chain - Medium](https://leetcode.com/problems/longest-string-chain/)
+
+```python
+from collections import defaultdict
+
+class Solution:
+  def longestStrChain(self, words: List[str]) -> int:
+    cnt_map = defaultdict(list)
+    for w in words:
+      cnt_map[len(w)].append(w)
+    pred_map = defaultdict(set)
+    for l in sorted(cnt_map):
+      for pre in cnt_map[l]:
+        for nex in cnt_map[l+1]:
+          if isPredecessor(pre, nex):
+            pred_map[pre].add(nex)
+
+    memo = {}
+    def dfs(w):
+      if w in memo:
+        return memo[w]
+      memo[w] = max([dfs(nex) for nex in pred_map[w]] or [0]) + 1
+      return memo[w]
+
+    ans = max([dfs(w) for w in words] or [0])
+    return ans
+
+def isPredecessor(pre, succe):
+  if len(pre) != len(succe) - 1:
+    return False
+  i = j = 0
+  first_diff = False
+  while i < len(pre):
+    if pre[i] == succe[j]:
+      i += 1; j+= 1
+    else:
+      if first_diff:
+        return False
+      first_diff = True
+      j += 1
+  return True
+```
+
+```python
+class Solution:
+  def longestStrChain(self, words: List[str]) -> int:
+    memo = {w: None for w in words}
+    def dfs(w):
+      if w not in memo: return 0
+      elif memo[w]: return memo[w]
+      memo[w] = max([dfs(w[:i] + w[i+1:]) for i in range(len(w))]) + 1
+      return memo[w]
+    return max([dfs(w) for w in words])
+```
+
+```python
+from collections import defaultdict
+
+class Solution:
+  def longestStrChain(self, words: List[str]) -> int:
+    dp = defaultdict(int)
+    for w in sorted(words, key=len):
+      dp[w] = max(dp[w[:i] + w[i+1:]] for i in range(len(w))) + 1
+    return max(dp.values())
+```
+
 ## [1049. Last Stone Weight II - Medium](https://leetcode.com/problems/last-stone-weight-ii/)
 
 - knapsack problem
