--- a/851-900.md
+++ b/851-900.md
@@ -64,3 +64,19 @@ class Solution:
             return False
     return True
 ```
+
+## [889. Construct Binary Tree from Preorder and Postorder Traversal - Medium](https://leetcode.com/problems/construct-binary-tree-from-preorder-and-postorder-traversal/)
+
+```python
+class Solution:
+  def constructFromPrePost(self, pre: List[int], post: List[int]) -> TreeNode:
+    if not pre:
+      return None
+    root = TreeNode(post.pop())
+    if len(pre) == 1:
+      return root
+    idx = pre.index(post[-1])
+    root.right = self.constructFromPrePost(pre[idx:], post)
+    root.left = self.constructFromPrePost(pre[1:idx], post)
+    return root
+```
