1197. Minimum Knight Moves

--- a/1151-1200.md
+++ b/1151-1200.md
@@ -11,3 +11,30 @@ class Solution:
           return False
     return len(set(str2)) < 26
 ```
+
+## [1197. Minimum Knight Moves - Medium](https://leetcode.com/problems/minimum-knight-moves/)
+
+```python
+from collections import deque
+
+class Solution:
+  dirs = [(1, 2), (2, 1), (2, -1), (1, -2),
+      (-1, -2), (-2, -1), (-2, 1), (-1, 2)]
+
+  def minKnightMoves(self, x: int, y: int) -> int:
+    X, Y = abs(x), abs(y)
+    touched = set()
+    q = deque()
+    q.append((0, 0, 0))
+    touched.add((0, 0))
+    while q:
+      x, y, cnt = q.popleft()
+      if x == X and y == Y:
+        return cnt
+      for dx, dy in self.dirs:
+        nx, ny = x + dx, y + dy
+        if (nx, ny) not in touched and nx >= -1 and ny >= -1:
+          q.append((nx, ny, cnt + 1))
+          touched.add((nx, ny))
+    return -1
+```
