--- a/51-100.md
+++ b/51-100.md
@@ -15,6 +15,22 @@ class Solution:
     return ans
 ```
 
+## [57. Insert Interval - Hard](https://leetcode.com/problems/insert-interval/)
+
+```python
+class Solution:
+  def insert(self, intervals: List[List[int]], newInterval: List[int]) -> List[List[int]]:
+    intervals.append(newInterval)
+    intervals.sort()
+    ans = [intervals[0]]
+    for start, end in intervals[1:]:
+      if start > ans[-1][1]:
+        ans.append([start, end])
+      else:
+        ans[-1][1] = max(ans[-1][1], end)
+    return ans
+```
+
 ## [72. Edit Distance - Hard](https://leetcode.com/problems/edit-distance/)
 
 ```python
